# controller/admin_login.go
@@ -13,11 +13,22 @@ func AdminLoginRegister(group *gin.RouterGroup) {
 	group.POST("/login", adminLogin.AdminLogin)
 }
 
+// AdminLogin godoc
+// @Summary 管理员登录
+// @Description 管理员登录
+// @Tags 管理员接口
+// @ID /admin_login/login
+// @Accept json
+// @Produce	json
+// @Param body body dto.AdminLoginInput true "body"
+// @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
+// @Router /admin_login/login [post]
 func (adminlogin *AdminLoginController) AdminLogin(c *gin.Context) {
 	params := &dto.AdminLoginInput{}
-	if err := params.BindValidParam(c); err != nil{
+	if err := params.BindValidParam(c); err != nil {
 		middleware.ResponseError(c, 1001, err)
 		return
 	}
-	middleware.ResponseSuccess(c, "")
+	out := &dto.AdminLoginOutput{Token: params.UserName}
+	middleware.ResponseSuccess(c, out)
 }
